--- a/css/style.css
+++ b/css/style.css
@@ -1152,6 +1152,13 @@ input:focus, textarea:focus, select:focus, button:focus {
     background-repeat: no-repeat;
     background-size: cover;
 }
+#circles-4{
+    background-image:url(../images/content/progress_5.png);
+    border-radius: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 .circles-decimals {
 	font-size: .4em;
 }
